<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>

    <string name="button_spotify">SPOTIFY</string>
    <string name="button_score_app">SCORE APP</string>
    <string name="button_library_app">LIBRARY APP</string>
    <string name="button_build_bigger">BUILD IT BIGGER</string>
    <string name="button_bacon_reader">XYZ READER</string>
    <string name="button_capstone">CAPSTONE: MY OWN APP</string>
</resources>
